--- a/점 메 추^^ 🍽️.md
+++ b/점 메 추^^ 🍽️.md
@@ -8,7 +8,7 @@
 
 최근 식사를 잘 챙겨 먹지 못하고 고생하는 캠퍼들이 참 많은 것 같습니다. 본인의 경우에도 식사로 무엇을 먹을지 고민을 많이 하는데, 그런데 쏟을 시간에 차라리 이론을 한 번, 구현을 한 번 더 보는 것이 더 큰 이득이라고 생각합니다.
 
-그런 취지에서 **부스트캠프 캠퍼들의 식사 메뉴를 책임지고 추천할 수 있는 간단한 프로그램**을 만들어보면 어떨까 하는 생각에서 계획하게 되었습니다.
+그런 취지에서 **부스트캠프 캠퍼들의 식사 메뉴를 책임지고 추천할 수 있는 간단한 프로그램 혹은 프롬프트**를 만들어보면 어떨까 하는 생각에서 계획하게 되었습니다.
 
 ### 목적
 
