--- a/부스트캠프 알람봇.md
+++ b/부스트캠프 알람봇.md
@@ -41,3 +41,6 @@
 - **Outlook, Teams, 슬랙 Reminder**
     - 반복 알림 지정은 가능
     - 사용 패턴을 분석해 “이런 알람 자주 쓰네요, 등록할까요?”까지는 아직 미흡
+
+ ## 6. 주의사항
+ - 실제 기능을 구현하지 마시고, 기능이 작동할 만한 워크플로우만 구성해보시면 되겠습니다!!
